--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.122.0",
+    "cachetools>=6.2.2",
+    "fastapi>=0.124.0",
     "httpx>=0.28.1",
-    "openai>=2.8.1",
-    "pydantic>=2.12.5",
-    "pydantic-settings>=2.12.0",
+    "openai>=2.9.0",
+    "pillow>=12.0.0",
+    "pyngrok>=7.5.0",
     "python-dotenv>=1.2.1",
-    "sqlalchemy>=2.0.44",
     "uvicorn[standard]>=0.38.0",
-    "mcp>=1.0.0",
 ]
