--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "httpx>=0.28.1",
     "openai>=2.9.0",
     "pillow>=12.0.0",
-    "pyngrok>=7.5.0",
     "python-dotenv>=1.2.1",
+    "python-telegram-bot>=21.0.0",
     "uvicorn[standard]>=0.38.0",
 ]
